_sass/layout/_footer.scss
footer {
  padding: 2.8125rem 0;
  border-top: 1px solid #f0f0f0;
  text-align: center;
  font-size: 0.875rem;
  color: rgba(33,33,33,0.6);

  a {
    color: rgba(33,33,33,0.6);
    border-bottom: 0;

    &:hover {
      color: $bright-blue;
      border-bottom: 0;
    }
  }
}

.social {
  display: flex;
  justify-content: space-around;
  align-items: center;
  max-width: 200px;
  margin: 0 auto 25px;
}

.social__link:not(:last-child) {
  margin-right: 1.125rem;
}

.social__icon {
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

#icu_logo {
  fill: currentColor;
}

div.footer-two-column-container {
  padding-top: 0;
  display: flex;
  flex-wrap: wrap;
  flex: 1 0 auto;
}

div.footer-column {
  display: block;
  width: 100%;
  margin-top: auto;
  margin-bottom: auto;

  @include breakpoint($md) {
    width: 48.4375%;
    margin-right: 3.125%;

    &:last-of-type,
    &:nth-child(2n+2) {
      margin-right: 0;
    }

    &-left {
      text-align: left;
      float: left;
      margin: 0 auto 0 0;
    }

    &-right {
      text-align: right;
      float: right;
      margin: 0 0 0 auto;
    }
  }
}

ul.footer-links-list {
  margin-bottom: 2rem;

  li {
    display: inline;
    list-style-type: none;
    margin: 1rem;
  }
}

